--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter
+  username               : &twitter "whussain907"
 facebook:
   username               :
   app_id                 :
@@ -80,34 +80,34 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Waseem Hussain"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  bio              : "Plant Breeder, Quantitative Geneticist, Postdoc"
+  location         : "Lincoln, Nebraska USA"
   employer         :
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : "http:////scholar.google.com/citations?user=ECbwMvkAAAAJ&hl=en"
   email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  researchgate     : "https://www.researchgate.net/profile/Waseem_Hussain2"
   uri              :
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
-  facebook         :
+  facebook         : "waseem.hussain.7"
   foursquare       :
-  github           : "academicpages"
+  github           : "whussain2"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  linkedin         : "waseem-hussain-783b1121/"
+  orcid            : "https://orcid.org/0000-0002-6861-0193"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "@whussain907"
   vine             :
   weibo            :
   xing             :
@@ -172,16 +172,19 @@ kramdown:
 
 # Collections
 collections:
-  teaching:
+publications:
     output: true
     permalink: /:collection/:path/
-  publications:
+teaching:
     output: true
     permalink: /:collection/:path/
-  portfolio:
+portfolio:
     output: true
     permalink: /:collection/:path/
-  talks:
+talks:
+    output: true
+    permalink: /:collection/:path/
+resources:
     output: true
     permalink: /:collection/:path/
 
