--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter "whussain907"
+  username               : &twitter 
 facebook:
   username               :
   app_id                 :
@@ -82,32 +82,32 @@ analytics:
 author:
   name             : "Waseem Hussain"
   avatar           : "profile.png"
-  bio              : "Plant Breeder, Quantitative Geneticist, Postdoc"
-  location         : "Lincoln, Nebraska USA"
+  bio              : "Plant Breeder, Quantitative Geneticist, Quantitative Genet"
+  location         : "Lincoln, Nebraska, USA"
   employer         :
-  googlescholar    : "http:////scholar.google.com/citations?user=ECbwMvkAAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?user=ECbwMvkAAAAJ&hl=en"
   email            :
-  researchgate     : "https://www.researchgate.net/profile/Waseem_Hussain2"
+  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "waseem.hussain.7"
+  facebook         :
   foursquare       :
   github           : "whussain2"
   google_plus      :
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "waseem-hussain-783b1121/"
+  linkedin         :
   orcid            : "https://orcid.org/0000-0002-6861-0193"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "@whussain907"
+  twitter          : "replacethistwitterhandle"
   vine             :
   weibo            :
   xing             :
@@ -172,19 +172,16 @@ kramdown:
 
 # Collections
 collections:
-publications:
+  teaching:
     output: true
     permalink: /:collection/:path/
-teaching:
+  publications:
     output: true
     permalink: /:collection/:path/
-portfolio:
+  portfolio:
     output: true
     permalink: /:collection/:path/
-talks:
-    output: true
-    permalink: /:collection/:path/
-resources:
+  talks:
     output: true
     permalink: /:collection/:path/
 
