--- a/_config.yml
+++ b/_config.yml
@@ -82,18 +82,18 @@ analytics:
 author:
   name             : "Waseem Hussain"
   avatar           : "profile.png"
-  bio              : "Plant Breeder, Quantitative Geneticist, Quantitative Genet"
+  bio              : "Plant Breeder, Quantitative Geneticist, Postdoc"
   location         : "Lincoln, Nebraska, USA"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=ECbwMvkAAAAJ&hl=en"
   email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  researchgate     : "https://www.researchgate.net/profile/Waseem_Hussain2"
   uri              :
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
-  facebook         :
+  facebook         : "waseem.hussain.7"
   foursquare       :
   github           : "whussain2"
   google_plus      :
