--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=ECbwMvkAAAAJ&hl=en"
   email            : "waseemhussain907@gmail.com"
-  researchgate     : 
+  researchgate     : "https://www.researchgate.net/pro"
   uri              :
   bitbucket        :
   codepen          :
@@ -178,13 +178,12 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
   talks:
     output: true
     permalink: /:collection/:path/
- resources:
-    output: true
-    permalink: /:collection/:path/
-
 
 # Defaults
 defaults:
