--- a/_config.yml
+++ b/_config.yml
@@ -99,8 +99,8 @@ author:
   google_plus      :
   keybase          :
   instagram        :
-  lastfm           :
-  linkedin         :
+  lastfm           : 
+  linkedin         : "https://www.linkedin.com/in/waseem-hussain-783b1121/"
   orcid            : "https://orcid.org/0000-0002-6861-0193"
   pinterest        :
   soundcloud       :
