--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ author:
   keybase          :
   instagram        :
   lastfm           : 
-  linkedin         : "https://www.linkedin.com/in/waseem-hussain-783b1121/"
+  linkedin         : "www.linkedin.com/in/waseem-hussain-783b1121"
   orcid            : "https://orcid.org/0000-0002-6861-0193"
   pinterest        :
   soundcloud       :
