--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "https://twitter.com/whussain907?lang=en"
   vine             :
   weibo            :
   xing             :
