--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter 
+  username               : &twitter "whussain907"
 facebook:
   username               :
   app_id                 :
@@ -100,14 +100,14 @@ author:
   keybase          :
   instagram        :
   lastfm           : 
-  linkedin         : "www.linkedin.com/in/waseem-hussain-783b1121"
+  linkedin         : "waseem-hussain-783b1121"
   orcid            : "https://orcid.org/0000-0002-6861-0193"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/whussain907?lang=en"
+  twitter          : "whussain907"
   vine             :
   weibo            :
   xing             :
