--- a/_config.yml
+++ b/_config.yml
@@ -232,7 +232,7 @@ defaults:
       author_profile: true
       share: true
       comment: true
-  # _talks
+ # _talks
   - scope:
       path: ""
       type: talks
@@ -240,6 +240,15 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+ # _resources
+  - scope:
+      path: ""
+      type: resources
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: true
 
 # Sass/SCSS
 sass:
