--- a/_config.yml
+++ b/_config.yml
@@ -184,6 +184,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+ resources:
+    output: true
+    permalink: /:collection/:path/
 
 # Defaults
 defaults:
@@ -247,9 +250,7 @@ defaults:
     values:
       layout: single
       author_profile: true
-      share: true
-      comment: true
-
+      share: true     
 # Sass/SCSS
 sass:
   sass_dir: _sass
