--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   foursquare       :
   github           : "whussain2"
   google_plus      :
-  keybase          :
+  publons          : "https://publons.com/researcher/1661206/waseem-hussain/"
   instagram        :
   lastfm           : 
   linkedin         : "waseem-hussain-783b1121"
