--- a/_config.yml
+++ b/_config.yml
@@ -273,12 +273,15 @@ timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database
 
 
 # Plugins
-plugins:
+gems:
+  - jekyll-remote-theme
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
+  - jemoji
   - jekyll-redirect-from
+# mimic GitHub Pages with --safe
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
