--- a/_config.yml
+++ b/_config.yml
@@ -134,7 +134,22 @@ exclude:
   - .bundle
   - .jekyll-assets-cache
   - .sass-cache
-  - assets
+  - assets/js/plugins
+  - assets/js/_main.js
+  - assets/js/vendor
+  - Capfile
+  - CHANGELOG
+  - config
+  - Gemfile
+  - Gruntfile.js
+  - gulpfile.js
+  - LICENSE
+  - log
+  - node_modules
+  - package.json
+  - Rakefile
+  - README
+  - tmp
 keep_files:
   - .git
   - .svn
