--- a/_config.yml
+++ b/_config.yml
@@ -89,8 +89,8 @@ analytics:
 author:
   name             : "Waseem Hussain"
   avatar           : "profile.png"
-  bio              : "Plant Breeder, Quantitative Geneticist, Postdoc"
-  location         : "Lincoln, Nebraska, USA"
+  bio              : "Scientist-I, Rice Breeding"
+  location         : " IRRI, Los Banos, Laguna, Philippines"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=ECbwMvkAAAAJ&hl=en"
   email            : "waseemhussain907@gmail.com"
