--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ author:
   name             : "Waseem Hussain"
   avatar           : "profile.png"
   bio              : "Scientist-I, Rice Breeding"
-  location         : " IRRI, Los Banos, Laguna, Philippines"
+  location         : " IRRI, Los Banos, Philippines"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=ECbwMvkAAAAJ&hl=en"
   email            : "waseemhussain907@gmail.com"
