--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ analytics:
 author:
   name             : "Waseem Hussain"
   avatar           : "profile.png"
-  bio              : "Scientist-I, Rice Breeding"
+  bio              : "Scientist-I, Rice Breeder"
   location         : " IRRI, Los Banos, Philippines"
   employer         :
   googlescholar    : "https://scholar.google.com/citations?user=ECbwMvkAAAAJ&hl=en"
