--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,6 @@ main:
   - title: "Resources"
     url: /resources/
     
-  - title: "RforPlantBreeding"
-    url: /rforplantbreeding/
+  - title: "RPlantBreeding"
+    url: /rplantbreeding/
 
